--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.2",
+    "@nestjs/apollo": "^12.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.2.2",
     "@nestjs/platform-express": "^10.0.0",
+    "apollo-server-core": "^3.13.0",
+    "graphql": "^16.10.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
